# gryffen-backend

./: .env.dev  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: dockerization.yml  main.yaml  main.yml  main_ci_cd.yml  tests.yml
deploy/: Dockerfile  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.yml
gryffen/: __init__.py  __main__.py  conftest.py  logging.py  security.py  settings.py  setup.py
gryffen/core/: __init__.py
gryffen/core/exchanges/TDAmeritrade/: auth.py  client.py  enums.py
gryffen/core/google/: __init__.py  storage.py
gryffen/core/strategies/: __init__.py  enum.py  grid.py  martingale.py
gryffen/core/stream/: finnhub.py
gryffen/core/websocket/: schema.py  streamer.py
gryffen/db/: base.py  dependencies.py  meta.py  utils.py
gryffen/db/handlers/: __init__.py  activation.py  credential.py  exchange.py  strategy.py  user.py
gryffen/db/migrations/: env.py
gryffen/db/migrations/versions/: 2023-04-20-02-47_3b261a4b6684.py  2023-04-21-00-58_cfee667a1d79.py  2023-04-21-15-36_a3667e6f70cc.py  2023-04-22-16-23_7459641d8779.py  2023-04-22-16-28_b4a236d3bbd1.py  2023-04-22-16-28_f2cbf5a97fa8.py  2023-04-23-02-13_e26821b08b9f.py  2023-04-25-00-32_dfeccc07768f.py  2023-04-25-00-47_d278d9a94020.py  2023-04-25-00-51_241d7bf5cdb6.py  2023-04-27-03-11_93fd7441c9b2.py  2023-04-27-23-14_cd8c93496492.py  2023-04-27-23-44_0f8b8f598a57.py  2023-04-28-11-29_0361737e6f5c.py  2023-04-28-12-39_14dcf949ce99.py  2023-04-28-12-43_77bfbeb7abd7.py  2023-04-29-10-43_a671605ee569.py  2023-05-08-02-01_142e993e7577.py  2023-05-26-23-35_5e6ba0b9a38e.py  2023-05-27-15-30_03fff2c3a61e.py  2023-05-27-23-23_d17670eebcaa.py  2023-09-04-22-30_94570295e8b7.py  2023-09-10-02-19_f584053c60d1.py  2023-09-10-19-00_dfccc62f44c1.py  2023-09-12-21-12_c47f5427f323.py  2023-09-15-13-08_929422a2c75e.py  2023-10-03-23-26_07188504a597.py  2023-10-04-01-10_e7672c28b751.py  2023-10-05-02-13_2ef207846123.py
gryffen/db/models/: __init__.py  activations.py  credentials.py  exchanges.py  positions.py  strategies.py  users.py
gryffen/services/: __init__.py
gryffen/static/: home.css
gryffen/tests/: __init__.py  test_helpers.py  test_mail_service.py  test_user.py
gryffen/web/: __init__.py  application.py  lifetime.py  router.py
gryffen/web/api/: __init__.py  router.py  utils.py
gryffen/web/api/docs/: __init__.py  views.py
gryffen/web/api/echo/: __init__.py  views.py
gryffen/web/templates/: home.html
(+17 files in other folders)
